--- a/1.html
+++ b/1.html
@@ -4,6 +4,7 @@
    <head>
      <meta charset="utf-8">
      <title>WEB HTML</title>
+     <link rel="stylesheet" href="style.css">
      <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149590851-1"></script>
 <script>
@@ -17,18 +18,23 @@
    </head>
    <body>
      <h1><a href="index.html">WEB</a></h1>
+     <div id="grid">
      <ol>
        <li><a href="1.html">HTML</a></li>
        <li><a href="2.html">CSS</a>  </li>
        <li> <a href="3.html">JavaScript</a></li>
     </ol>
-    <h2>HTML</h2>
-    <img src="html.png" width="100px" height="100px">
-    <p>Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
+    <div id="article">
+      <h2>HTML</h2>
+      <img src="html.png" width="100px" height="100px">
+      <p>Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
 
-    <p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-    </p>
-<p><iframe width="560" height="315" src="https://www.youtube.com/embed/u0OeZfIfBRI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+      <p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
+      </p>
+
+      <p><iframe width="720" height="400" src="https://www.youtube.com/embed/u0OeZfIfBRI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+    </div>
+    </div>
 
 <p><div id="disqus_thread"></div>
 <script>
@@ -64,5 +70,6 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script--></p>
+
    </body>
  </html>
