--- a/Calculator.html
+++ b/Calculator.html
@@ -14,7 +14,7 @@
       }
       function back(){
         var exp = document.form.textview.value;
-        document.form.textview.value = exp.substring(0,exp.lenght-1);
+        document.form.textview.value = exp.substring(0,exp.length-1);
       }
     </script>
     <style>
@@ -65,7 +65,7 @@
       <table>
         <tr>
           <td><input class="button" type="button" value="c" onclick="clean()"></td>
-          <td><input class="button" type="button" value="<" onclick="back()"</td>
+          <td><input class="button" type="button" value="<" onclick="back()"></td>
           <td><input class="button" type="button" value="*" onclick="insert('*')"></td>
           <td><input class="button" type="button" value="/" onclick="insert('/')"></td>
         </tr>
